Fix: push directly to gh-pages branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,6 @@ on:
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 env:
   APP_NAME: Budget
@@ -47,7 +45,6 @@ jobs:
       - name: Update version in Info.plist
         run: |
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ steps.version.outputs.version }}" ${{ env.APP_NAME }}/Info.plist
-          # Increment build number based on run number
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion ${{ github.run_number }}" ${{ env.APP_NAME }}/Info.plist
 
       - name: Build Release
@@ -83,30 +80,38 @@ jobs:
         env:
           SPARKLE_PRIVATE_KEY: ${{ secrets.SPARKLE_PRIVATE_KEY }}
         run: |
-          # Write private key to temp file
           echo "$SPARKLE_PRIVATE_KEY" | base64 -d > /tmp/sparkle_private_key
 
-          # Sign the update
           SIGNATURE=$(/tmp/bin/sign_update "export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip" --ed-key-file /tmp/sparkle_private_key | grep "sparkle:edSignature" | sed 's/.*"\(.*\)".*/\1/')
-
           echo "signature=$SIGNATURE" >> $GITHUB_OUTPUT
 
-          # Get file size
           SIZE=$(stat -f%z "export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip")
           echo "size=$SIZE" >> $GITHUB_OUTPUT
 
-          # Cleanup
           rm /tmp/sparkle_private_key
 
-      - name: Generate Appcast
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip
+          generate_release_notes: true
+          draft: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy appcast to gh-pages
         run: |
-          mkdir -p gh-pages
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Download existing appcast if it exists
-          curl -sL "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/appcast.xml" -o gh-pages/appcast.xml 2>/dev/null || true
+          # Create orphan gh-pages branch or fetch existing
+          git fetch origin gh-pages:gh-pages 2>/dev/null || git checkout --orphan gh-pages
+          git checkout gh-pages || git checkout --orphan gh-pages
 
-          # Create or update appcast
-          cat > gh-pages/appcast.xml << 'APPCAST_EOF'
+          # Clean and create appcast
+          git rm -rf . 2>/dev/null || true
+
+          cat > appcast.xml << EOF
           <?xml version="1.0" encoding="utf-8"?>
           <rss version="2.0" xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" xmlns:dc="http://purl.org/dc/elements/1.1/">
             <channel>
@@ -116,7 +121,7 @@ jobs:
               <language>fr</language>
               <item>
                 <title>Version ${{ steps.version.outputs.version }}</title>
-                <pubDate>${{ github.event.head_commit.timestamp }}</pubDate>
+                <pubDate>$(date -R)</pubDate>
                 <sparkle:version>${{ github.run_number }}</sparkle:version>
                 <sparkle:shortVersionString>${{ steps.version.outputs.version }}</sparkle:shortVersionString>
                 <sparkle:minimumSystemVersion>14.0</sparkle:minimumSystemVersion>
@@ -132,31 +137,8 @@ jobs:
               </item>
             </channel>
           </rss>
-          APPCAST_EOF
+          EOF
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip
-          generate_release_notes: true
-          draft: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload appcast artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: gh-pages
-
-  deploy-pages:
-    needs: build
-    runs-on: ubuntu-latest
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          git add appcast.xml
+          git commit -m "Update appcast for v${{ steps.version.outputs.version }}"
+          git push origin gh-pages --force
