--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,23 +81,16 @@ jobs:
           SPARKLE_PRIVATE_KEY: ${{ secrets.SPARKLE_PRIVATE_KEY }}
         run: |
           echo "$SPARKLE_PRIVATE_KEY" | base64 -d > /tmp/sparkle_private_key
-
-          # Get signature from sign_update output
           SIGN_OUTPUT=$(/tmp/bin/sign_update "export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip" --ed-key-file /tmp/sparkle_private_key)
           echo "Sign output: $SIGN_OUTPUT"
-
-          # Extract just the signature value (after the = sign)
           SIGNATURE=$(echo "$SIGN_OUTPUT" | grep -o 'edSignature="[^"]*"' | cut -d'"' -f2)
           if [ -z "$SIGNATURE" ]; then
-            # Try alternative format
             SIGNATURE=$(echo "$SIGN_OUTPUT" | tail -1)
           fi
           echo "Extracted signature: $SIGNATURE"
           echo "signature=$SIGNATURE" >> $GITHUB_OUTPUT
-
           SIZE=$(stat -f%z "export/${{ env.APP_NAME }}-${{ steps.version.outputs.version }}.zip")
           echo "size=$SIZE" >> $GITHUB_OUTPUT
-
           rm /tmp/sparkle_private_key
 
       - name: Create GitHub Release
@@ -118,41 +111,38 @@ jobs:
           REPO: ${{ github.repository }}
           OWNER: ${{ github.repository_owner }}
           REPO_NAME: ${{ github.event.repository.name }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Clone gh-pages branch in a separate directory
-          git clone --branch gh-pages --single-branch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-dir
+          git clone --branch gh-pages --single-branch "https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git" gh-pages-dir
           cd gh-pages-dir
-
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          cat > appcast.xml << EOF
-<?xml version="1.0" encoding="utf-8"?>
-<rss version="2.0" xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" xmlns:dc="http://purl.org/dc/elements/1.1/">
-  <channel>
-    <title>Budget</title>
-    <link>https://${OWNER}.github.io/${REPO_NAME}/</link>
-    <description>Mises a jour de Budget</description>
-    <language>fr</language>
-    <item>
-      <title>Version ${VERSION}</title>
-      <pubDate>$(date -R)</pubDate>
-      <sparkle:version>${RUN_NUMBER}</sparkle:version>
-      <sparkle:shortVersionString>${VERSION}</sparkle:shortVersionString>
-      <sparkle:minimumSystemVersion>14.0</sparkle:minimumSystemVersion>
-      <description><![CDATA[
-        <h2>Nouveautes de la version ${VERSION}</h2>
-        <p>Consultez les notes de version sur GitHub.</p>
-      ]]></description>
-      <enclosure
-        url="https://github.com/${REPO}/releases/download/v${VERSION}/Budget-${VERSION}.zip"
-        sparkle:edSignature="${SIGNATURE}"
-        length="${SIZE}"
-        type="application/octet-stream"/>
-    </item>
-  </channel>
-</rss>
-EOF
+          echo '<?xml version="1.0" encoding="utf-8"?>' > appcast.xml
+          echo '<rss version="2.0" xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" xmlns:dc="http://purl.org/dc/elements/1.1/">' >> appcast.xml
+          echo '  <channel>' >> appcast.xml
+          echo '    <title>Budget</title>' >> appcast.xml
+          echo "    <link>https://${OWNER}.github.io/${REPO_NAME}/</link>" >> appcast.xml
+          echo '    <description>Mises a jour de Budget</description>' >> appcast.xml
+          echo '    <language>fr</language>' >> appcast.xml
+          echo '    <item>' >> appcast.xml
+          echo "      <title>Version ${VERSION}</title>" >> appcast.xml
+          echo "      <pubDate>$(date -R)</pubDate>" >> appcast.xml
+          echo "      <sparkle:version>${RUN_NUMBER}</sparkle:version>" >> appcast.xml
+          echo "      <sparkle:shortVersionString>${VERSION}</sparkle:shortVersionString>" >> appcast.xml
+          echo '      <sparkle:minimumSystemVersion>14.0</sparkle:minimumSystemVersion>' >> appcast.xml
+          echo '      <description><![CDATA[' >> appcast.xml
+          echo "        <h2>Nouveautes de la version ${VERSION}</h2>" >> appcast.xml
+          echo '        <p>Consultez les notes de version sur GitHub.</p>' >> appcast.xml
+          echo '      ]]></description>' >> appcast.xml
+          echo '      <enclosure' >> appcast.xml
+          echo "        url=\"https://github.com/${REPO}/releases/download/v${VERSION}/Budget-${VERSION}.zip\"" >> appcast.xml
+          echo "        sparkle:edSignature=\"${SIGNATURE}\"" >> appcast.xml
+          echo "        length=\"${SIZE}\"" >> appcast.xml
+          echo '        type="application/octet-stream"/>' >> appcast.xml
+          echo '    </item>' >> appcast.xml
+          echo '  </channel>' >> appcast.xml
+          echo '</rss>' >> appcast.xml
 
           git add appcast.xml
           git commit -m "Update appcast for v${VERSION}"
